[gd_scene load_steps=6 format=2]

[ext_resource path="res://player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://SpaceCowboy.tres" type="DynamicFont" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.9119

[sub_resource type="CircleShape2D" id=2]
radius = 17.0955

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Detector" type="RayCast2D" parent="."]
collision_mask = 5
collide_with_areas = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="GameOver" type="AcceptDialog" parent="HUD"]
margin_left = -56.0
margin_top = -29.0
margin_right = 55.0
margin_bottom = 29.0
popup_exclusive = true
window_title = ""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parts" type="Label" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 27.3367
margin_top = -98.7875
margin_right = 307.337
margin_bottom = -25.7875
custom_fonts/font = ExtResource( 3 )
text = "Parts: 0/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pickup" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup"]
shape = SubResource( 2 )

[connection signal="confirmed" from="HUD/GameOver" to="." method="_on_GameOver_confirmed"]
[connection signal="custom_action" from="HUD/GameOver" to="." method="_on_GameOver_custom_action"]
[connection signal="body_entered" from="Pickup" to="." method="_on_Pickup_body_entered"]
